NXP-29571: adapt to 10.10 rough backport